--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "start": "gitbook serve . docs",
-      "build": "gitbook build . docs"
+      "start": "gitbook serve",
+      "build": "gitbook build --no-live --no-watch"
   },
   "author": "",
   "license": "ISC"
