--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
       "start": "gitbook serve",
-      "build": "gitbook build --no-live --no-watch"
+      "build": "gitbook build"
   },
   "author": "",
   "license": "ISC"
